--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,3 +32,81 @@
   width: 360px;
   height: 200px;
 }
+
+
+/*///////////////////////////*/
+
+
+ .feedback-form{
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+ }
+
+ button{
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  background: #4e75ff;
+  color: #fff;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  margin-top: 16px;
+  }
+  button:hover{
+    background: #6c8cff;
+  }
+
+ label {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  outline: none;
+
+ }
+.feedback-form{
+  width: 360px;
+
+}
+
+.feedback-form input[type="email"],
+.feedback-form textarea{
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  box-shadow: none;
+  box-sizing: border-box;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 0.3s;
+  margin-top: 8px;
+}
+
+.feedback-form input {
+  display: block;
+  margin-bottom: 10px;
+  width: 100%;
+}
+.feedback-form textarea{
+  width: 100%;
+  height: 80px;
+  padding: 0;
+  outline: none;
+}
+
+.feedback-form input[type="email"]:hover,
+.feedback-form textarea:hover{
+  border-color: black;
+}
+.feedback-form input[type="email"]
+.feedback-form textarea:active {
+  border-color: #31313a;}
